Adjust the z-index on the featured banner case study on the home page, so it stays under the global fixed header element.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4699,7 +4699,7 @@ header {
       position: absolute;
       top: 0;
       width: 100%;
-      z-index: 10; }
+      z-index: 1; }
       @media (min-width: 671px) and (max-width: 979px) {
         .front .featured-case-study .gradient {
           background-image: linear-gradient(to left, #282828, rgba(40, 40, 40, 0.4)); } }
@@ -4712,7 +4712,7 @@ header {
     .front .featured-case-study .featured-case-study-text {
       text-align: center;
       position: relative;
-      z-index: 100; }
+      z-index: 1; }
       @media (min-width: 671px) and (max-width: 979px) {
         .front .featured-case-study .featured-case-study-text {
           float: left;
